--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplot as plt \n",
+    "import seaborn as sns"
    ]
   }
  ],
